--- a/7IM_TechTest/7IM_TechTest.csproj
+++ b/7IM_TechTest/7IM_TechTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,8 +7,13 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <RootNamespace>_7IM_TechTest</RootNamespace>
   </PropertyGroup>
-
+  
   <ItemGroup>
+    <InternalsVisibleTo Include="TechTest.UnitTests" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
