--- a/7IM_TechTest/7IM_TechTest.csproj
+++ b/7IM_TechTest/7IM_TechTest.csproj
@@ -10,11 +10,12 @@
   
   <ItemGroup>
     <InternalsVisibleTo Include="TechTest.UnitTests" />
+    <InternalsVisibleTo Include="TechTest.IntegrationTests" />
   </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
